# creoleum_lid

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: train_config.yaml
data/: README.md
tools/lid/serving/: service.py
tools/lid/training/: train.py
